--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -4,13 +4,13 @@
 
     <artifactId>querqy-core</artifactId>
     <groupId>querqy</groupId>
-    <version>3.2.0-SNAPSHOT</version>
+    <version>3.2.0</version>
 
     <scm>
         <url>git@github.com:renekrie/querqy.git</url>
         <connection>scm:git:git@github.com:renekrie/querqy.git</connection>
         <developerConnection>scm:git:git@github.com:renekrie/querqy.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>querqy-core-3.2.0</tag>
     </scm>
 
     <prerequisites>
