--- a/querqy-antlr/pom.xml
+++ b/querqy-antlr/pom.xml
@@ -2,6 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>querqy</groupId>
+        <artifactId>querqy-parent</artifactId>
+        <version>3.2.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
     <groupId>querqy</groupId>
     <artifactId>querqy-antlr</artifactId>
     <version>3.0.3-SNAPSHOT</version>
@@ -12,16 +19,10 @@
         <tag>HEAD</tag>
     </scm>
 
-    <prerequisites>
-        <maven>3.2.0</maven>
-    </prerequisites>
-
     <properties>
         <querqy.core.version>3.0.2</querqy.core.version>
         <antlr4.visitor>true</antlr4.visitor>
-        <junit.version>4.11</junit.version>
-        <hamcrest.version>1.3</hamcrest.version>
-        <mockito.version>1.10.19</mockito.version>
+        <antlr4.version>4.2.2</antlr4.version>
     </properties>
 
     <repositories>
@@ -51,34 +52,22 @@
 
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
-            <version>${hamcrest.version}</version>
-            <scope>test</scope>
+            <artifactId>hamcrest</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.hamcrest</groupId>
-                    <artifactId>hamcrest-core</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
         </dependency>
 
 
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.2.2</version>
+            <version>${antlr4.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.abego.treelayout</groupId>
@@ -100,7 +89,7 @@
             <plugin>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4-maven-plugin</artifactId>
-                <version>4.2.2</version>
+                <version>${antlr4.version}</version>
                 <executions>
                     <execution>
                         <goals>
