--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -10,13 +10,13 @@
 
     <groupId>querqy</groupId>
     <artifactId>querqy-core</artifactId>
-    <version>3.3.0</version>
+    <version>3.4.0-SNAPSHOT</version>
 
     <scm>
         <url>git@github.com:renekrie/querqy.git</url>
         <connection>scm:git:git@github.com:renekrie/querqy.git</connection>
         <developerConnection>scm:git:git@github.com:renekrie/querqy.git</developerConnection>
-        <tag>querqy-core-3.3.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <prerequisites>
