--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -33,7 +33,7 @@
         <hamcrest.version>2.1</hamcrest.version>
         <mockito.version>2.27.0</mockito.version>
 
-        <querqy.core.version>3.3.0-SNAPSHOT</querqy.core.version>
+        <querqy.core.version>3.3.0</querqy.core.version>
         <querqy.antlr.version>3.0.2</querqy.antlr.version>
         <lucene.version>7.2.0</lucene.version>
         <commons.io.version>2.5</commons.io.version>
