--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -35,7 +35,8 @@
 
         <querqy.core.version>3.3.0</querqy.core.version>
         <querqy.antlr.version>3.0.2</querqy.antlr.version>
-        <lucene.version>8.0.0</lucene.version>
+        <lucene.version>8.1.0</lucene.version>
+        <minidev.json-smart.version>2.3</minidev.json-smart.version>
         <commons.io.version>2.5</commons.io.version>
         <slf4j.version>1.7.26</slf4j.version>
 
