--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -41,8 +41,22 @@
                     <groupId>com.fasterxml.jackson.core</groupId>
                     <artifactId>jackson-databind</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.jayway.jsonpath</groupId>
+                    <artifactId>json-path</artifactId>
+                </exclusion>
 
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <!--
+            Solr provides com.jayway.jsonpath:json-path but not net.minidev:json-smart
+            on which some classes of json-path depend
+            -->
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>${minidev.json-smart.version}</version>
         </dependency>
 
         <dependency>
