--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
-        <version>4.4.lucene810.1</version>
+        <version>4.5.lucene810.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
