--- a/querqy-for-lucene/querqy-lucene/pom.xml
+++ b/querqy-for-lucene/querqy-lucene/pom.xml
@@ -5,7 +5,7 @@
         <groupId>querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>4.5.lucene810.0-SNAPSHOT</version>
+        <version>4.4.lucene810.1</version>
     </parent>
     <artifactId>querqy-lucene</artifactId>
 
