--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,9 @@ before_install:
 
 language: java
 jdk:
-  - oraclejdk8
+  - openjdk8
 branches:
   only:
-    - solr6_6
     - solr7_0
     - solr7_2
     - solr8_0
