--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -10,7 +10,7 @@
         <url>git@github.com:renekrie/querqy.git</url>
         <connection>scm:git:git@github.com:renekrie/querqy.git</connection>
         <developerConnection>scm:git:git@github.com:renekrie/querqy.git</developerConnection>
-        <tag>querqy-for-lucene-4.4.lucene810.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <prerequisites>
