--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -36,7 +36,7 @@
         <hamcrest.version>2.1</hamcrest.version>
         <mockito.version>2.27.0</mockito.version>
 
-        <jackson.version>[2.9.10.1,)</jackson.version>
+        <jackson.version>2.9.9</jackson.version>
         <json-path.version>2.4.0</json-path.version>
     </properties>
 
