--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,58 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>querqy</groupId>
-    <artifactId>querqy-parent</artifactId>
-    <version>3.2.0-SNAPSHOT</version>
+    <groupId>org.querqy</groupId>
+    <artifactId>querqy-multimodule</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <!--
+        ****** THIS IS NOT A PARENT.pom *********************************************************
+
+         This project is NOT a parent project and not a release artifact.
+
+         The two modules, querqy-core and querqy-for-lucene, are released separately. This .pom
+         file only serves as a help to run a multi-module build when developing new core and
+         lucene/solr features at the same time
+
+        *****************************************************************************************
+    -->
+
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Querqy query rewriting - multi-module build helper</description>
+    <url>https://querqy.org</url>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>renekrie</id>
+            <name>René Kriegler</name>
+            <email>post@rene-kriegler.com</email>
+            <url>https://github.com/renekrie</url>
+        </developer>
+        <developer>
+            <id>mkr</id>
+            <name>Matthias Krüger</name>
+            <url>https://github.com/mkr</url>
+        </developer>
+        <developer>
+            <id>JohannesDaniel</id>
+            <name>Johannes Peter</name>
+            <email>johannesdaniel.peter@gmx.de</email>
+            <url>https://github.com/JohannesDaniel</url>
+        </developer>
+    </developers>
+
     <scm>
-        <url>git@github.com:renekrie/querqy.git</url>
-        <connection>scm:git:git@github.com:renekrie/querqy.git</connection>
-        <developerConnection>scm:git:git@github.com:renekrie/querqy.git</developerConnection>
+        <url>git@github.com:querqy/querqy.git</url>
+        <connection>scm:git:git@github.com:querqy/querqy.git</connection>
+        <developerConnection>scm:git:git@github.com:querqy/querqy.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
@@ -18,55 +61,10 @@
         <maven>3.3.0</maven>
     </prerequisites>
 
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <junit.version>4.12</junit.version>
-        <hamcrest.version>2.1</hamcrest.version>
-        <mockito.version>2.27.0</mockito.version>
-        <slf4j.version>1.7.26</slf4j.version>
-
-        <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
-        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-        <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
-    </properties>
-
     <modules>
         <module>querqy-core</module>
         <module>querqy-for-lucene</module>
     </modules>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest</artifactId>
-                <version>${hamcrest.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
-                <scope>test</scope>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.hamcrest</groupId>
-                        <artifactId>hamcrest-core</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-core</artifactId>
-                <version>${mockito.version}</version>
-                <scope>test</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+
 </project>
