--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -8,14 +8,46 @@
        developing new core and lucene/solr features at the same time.
     -->
 
-    <groupId>querqy</groupId>
+    <groupId>org.querqy</groupId>
     <artifactId>querqy-core</artifactId>
     <version>3.5.0-SNAPSHOT</version>
 
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Querqy query rewriting - core</description>
+    <url>https://querqy.org</url>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>renekrie</id>
+            <name>René Kriegler</name>
+            <email>post@rene-kriegler.com</email>
+            <url>https://github.com/renekrie</url>
+        </developer>
+        <developer>
+            <id>mkr</id>
+            <name>Matthias Krüger</name>
+            <url>https://github.com/mkr</url>
+        </developer>
+        <developer>
+            <id>JohannesDaniel</id>
+            <name>Johannes Peter</name>
+            <email>johannesdaniel.peter@gmx.de</email>
+            <url>https://github.com/JohannesDaniel</url>
+        </developer>
+    </developers>
+
+
     <scm>
-        <url>git@github.com:renekrie/querqy.git</url>
-        <connection>scm:git:git@github.com:renekrie/querqy.git</connection>
-        <developerConnection>scm:git:git@github.com:renekrie/querqy.git</developerConnection>
+        <url>git@github.com:querqy/querqy.git</url>
+        <connection>scm:git:git@github.com:querqy/querqy.git</connection>
+        <developerConnection>scm:git:git@github.com:querqy/querqy.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
@@ -30,6 +62,7 @@
         <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
         <junit.version>4.12</junit.version>
@@ -91,6 +124,22 @@
                 <executions>
                     <execution>
                         <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven-javadoc-plugin.version}</version>
+                <configuration>
+                    <source>8</source>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
