--- a/querqy-for-lucene/querqy-lucene/pom.xml
+++ b/querqy-for-lucene/querqy-lucene/pom.xml
@@ -2,12 +2,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>querqy</groupId>
+        <groupId>org.querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
         <relativePath>../pom.xml</relativePath>
         <version>4.6.lucene810.0-SNAPSHOT</version>
     </parent>
     <artifactId>querqy-lucene</artifactId>
+
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Querqy query rewriting for Lucene</description>
 
     <dependencies>
         <!--
@@ -65,25 +68,5 @@
 
     </dependencies>
 
-    <build>
 
-        <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>${maven-source-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-        </plugins>
-
-    </build>
 </project>
